[package]
name = "rust_learning_group_public"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lints.rust]
unused_imports = "allow"

[[bin]]
name = "cargo_install"

[[bin]]
name = "hello_world"

[[bin]]
name = "basic_input"

[[bin]]
name = "basic_output"

[[bin]]
name = "hello_world_complex"

[[bin]]
name = "control_flow"

[[bin]]
name = "control_flow_2"

[[bin]]
name = "guess_number"